# LAgent

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  ProofOfConcept.md  README.md  cliff.toml  release-plz.toml  wispee.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-release.yml  ci.yml  release.yml
docs/: ARCHITECTURE.md  ROADMAP.md  SPEC.md  TOKEN_HEAP.md
examples/: agent_soul.la  collections.wpee  control_flow.la  emotion_analysis.wpee  hello.la  kernel_call.wpee  phase7_demo.la  structs_enums.la
lagent-cli/: Cargo.toml
lagent-cli/src/: main.rs
lagent-compiler/: CHANGELOG.md  Cargo.toml
lagent-compiler/src/: fmt.rs  lib.rs  project.rs  resolver.rs
lagent-compiler/src/codegen/: mod.rs  opcodes.rs
lagent-compiler/src/lexer/: mod.rs
lagent-compiler/src/parser/: ast.rs  mod.rs
lagent-compiler/src/semantic/: mod.rs
lagent-compiler/tests/: compile.rs
lagent-vm/: CHANGELOG.md  Cargo.toml
lagent-vm/src/: lib.rs  persistent_store.rs  vm.rs
lagent-vm/src/backends/: anthropic.rs  mod.rs  simulated.rs
lagent-vm/src/runtime/: mod.rs  token_heap.rs
lagent-vm/tests/: vm.rs
wispee-cli/: CHANGELOG.md  Cargo.toml
wispee-cli/src/: main.rs
wispee-compiler/: Cargo.toml
wispee-compiler/src/: fmt.rs  lib.rs  project.rs
wispee-compiler/src/codegen/: mod.rs  opcodes.rs
wispee-compiler/src/lexer/: mod.rs
wispee-compiler/src/parser/: ast.rs  mod.rs
wispee-compiler/src/semantic/: mod.rs
wispee-compiler/tests/: compile.rs
wispee-vm/: Cargo.toml
wispee-vm/src/: lib.rs  persistent_store.rs  vm.rs
wispee-vm/src/backends/: anthropic.rs  simulated.rs
wispee-vm/src/runtime/: token_heap.rs
wispee-vm/tests/: vm.rs
