[workspace]
members = [
    "lagent-compiler",
    "lagent-vm",
    "lagent-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["L-Agent Contributors"]
license = "Apache-2.0"
repository = "https://github.com/lagent-lang/lagent"

[workspace.dependencies]
logos = "0.16"
chumsky = "0.12"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
