[workspace]
members = [
    "wispee-compiler",
    "wispee-vm",
    "wispee-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Wispee Contributors"]
license = "Apache-2.0"
repository = "https://github.com/eraflo/Wispee"

[workspace.dependencies]
logos = "0.14"
chumsky = "0.9"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
anyhow = "1"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
