[package]
name = "lagent-vm"
description = "L-Agent virtual machine and runtime: executes .lbc bytecode and manages inference backends"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
bincode = "1"

[dependencies.lagent-compiler]
path = "../lagent-compiler"

[dev-dependencies]
lagent-compiler = { path = "../lagent-compiler" }

[features]
default = ["backend-simulated"]
backend-simulated = []
backend-remote = ["reqwest", "tokio"]
# backend-local-gguf requires the optional `llama-cpp-bindings` crate (added in Phase 1).
backend-local-gguf = []

[dependencies.reqwest]
version = "0.12"
features = ["json"]
optional = true

[dependencies.tokio]
version = "1"
features = ["full"]
optional = true
