[package]
name = "wispee"
description = "Wispee CLI: compile, run, and manage .wpee programs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "wispee"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
wispee-compiler = { path = "../wispee-compiler" }
wispee-vm = { path = "../wispee-vm" }
clap = { workspace = true }
anyhow = { workspace = true }

[features]
default = []
backend-remote = ["wispee-vm/backend-remote"]
