[package]
name = "wispee-compiler"
description = "Wispee language compiler: lexer, parser, semantic analysis, and bytecode generation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
logos = { workspace = true }
chumsky = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
bincode = "1"
