[package]
name = "wispee-vm"
description = "Wispee virtual machine and runtime: executes .wbc bytecode and manages inference backends"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
anyhow = { workspace = true }
bincode = "1"

[dependencies.wispee-compiler]
path = "../wispee-compiler"

[dev-dependencies]
wispee-compiler = { path = "../wispee-compiler" }

[features]
default = ["backend-simulated"]
backend-simulated = []
backend-remote = ["reqwest", "tokio"]
# backend-local-gguf requires the optional `llama-cpp-bindings` crate (added in Phase 1).
backend-local-gguf = []

[dependencies.reqwest]
version = "0.12"
features = ["json", "blocking"]
optional = true

[dependencies.tokio]
version = "1"
features = ["full"]
optional = true
